# login-page-PCS3443

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/schemas/: __init__.py  token.py  user.py
app/services/: user_service.py
frontend/: index.html  script.js  styles.css
